--- a/Ecommerce/src/styles/footer.scss
+++ b/Ecommerce/src/styles/footer.scss
@@ -146,7 +146,7 @@ line-height: 20px;
             // background-color: white;
             border: 1px solid rgba(228, 228, 235, 1);
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
             
             span {
               color: #333;
